--- a/aut.html
+++ b/aut.html
@@ -95,7 +95,7 @@
                     </div>
                     <div class="flex">
                         <i class="fa-regular fa-heart" id="ion"></i>
-                        <i class="fa-light fa-share" id="ion"></i>
+                        <i class="fa-solid fa-share-nodes" id="ion"></i>
                     </div>
                 </div>
             </div>
